--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "hbs": "^4.2.0",
+    "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
+    "npm": "^10.2.4",
     "path": "^0.12.7"
   },
   "engines": {
-    "node":">= 14.x"
+    "node": ">= 14.x"
   }
-
 }
