--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
+    "morgan": "^1.10.0",
     "npm": "^10.2.4",
     "path": "^0.12.7"
   },
